# sql-business-logic-extractor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  compare.py  compare_lineage.py  export_neo4j.py  extract.py  governance_extract.py  healthcare_schema.yaml  llm_translate.py  metadata.py  neo4j_chat_app.py  normalize.py  offline_translate.py  pyproject.toml  resolve.py  run_describe.py  translate.py  work-shipments.md
__design__/: 2026-06-11_three_glossary_architecture.md
archive/: compare.py
cli/: extract_view_metadata.py  governance_extract.py  llm_translate.py  offline_translate.py
docs/: parsing_field_guide.md  running_phase_d_tools.md  work-shipments.md
examples/: quality.sql
graphify-out/: GRAPH_REPORT.md  graph.json
notebooks/: build_clarity_schema.py  debug_one_view_expansion.py  demo_llm_vs_engineered.py  describe_one_view.py  diagnose_audit_errors.py  diagnose_describe.py  diagnose_external_view_expansion.py  diagnose_failing_proc.py  diagnose_one_parse_error.py  diagnose_scope_table_collision.py  diagnose_skipped_files.py  diagnose_sync.py  fabric_llm_setup.py  inspect_one_view_after_preprocess.py  inspect_view_scope_tree.py  normalize_one_proc.py  probe_external_view_paths.py  probe_lakehouse_writes.py  probe_lakehouse_writes_v2.py  review_proposals.py  run_all_healthy_subset.py  run_all_tools_fabric.py  run_describe_cell.py  run_extract_and_verify.py  run_graph_pipeline_fabric.py  run_scan_cell.py  show_parse_context.py  trace_one_view.py  verify_and_diagnose_one_error.py  verify_proc_normalize_reload.py  verify_union_fix.py
planning/: README.md
sql_logic_extractor/: __init__.py  batch.py  business_logic.py  collibra.py  comment_attachment.py  comments.py  corpus_schema.py  extract.py  license.py  llm_client.py  normalize.py  proc_normalize.py  products.py  resolve.py  translate.py
tests/: dump_all.py  test_bi_complex.py  test_bi_complex_lineage.py  test_column_translator.py  test_comments.py  test_compare.py  test_corpus_schema.py  (+7 more)
(+799 files in other folders)
