[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-logic-extractor"
version = "0.1.0"
description = "Extract, normalize, compare, and translate business logic from SQL queries"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["sql_logic_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
